fix: filter source group availability
